feat: 계정 검사 제외 추가 (rds_superuser_role)